--- a/user-web/user-manager/Dockerfile
+++ b/user-web/user-manager/Dockerfile
@@ -8,5 +8,5 @@ COPY ${JAR_FILE} app.jar
 ENV JAVA_OPTS=""
 ENV PARAMS=""
 ENV TZ="Asia/Shanghai"
-
-ENTRYPOINT [ "bash", "-c", "java $JAVA_OPTS $PARAMS -Duser.timezone=GMT+08 -jar /app.jar" ]
+EXPOSE 32001
+ENTRYPOINT [ "java $JAVA_OPTS $PARAMS -Duser.timezone=GMT+08 -jar /app.jar" ]
