--- a/user-web/user-manager/Dockerfile
+++ b/user-web/user-manager/Dockerfile
@@ -5,8 +5,5 @@ ARG JAR_FILE
 COPY ${JAR_FILE} app.jar
 #COPY *.jar /app.jar
 
-ENV JAVA_OPTS=""
-ENV PARAMS=""
-ENV TZ="Asia/Shanghai"
 EXPOSE 32001
-ENTRYPOINT [ "java $JAVA_OPTS $PARAMS -Duser.timezone=GMT+08 -jar /app.jar" ]
+ENTRYPOINT [ "java -jar /app.jar" ]
